Fixed gap in modal

--- a/src/components/SuccessActionModal/SuccessActionModal.module.scss
+++ b/src/components/SuccessActionModal/SuccessActionModal.module.scss
@@ -89,11 +89,6 @@
 .closeButton {
 	font-size: 36px;
 	line-height: 1.06;
-}
-
-.closeButton {
-	font-size: 36px;
-	line-height: 1.06;
 	justify-self: end;
 	grid-column:  span 1;
 
